# fastvlm-adaptation

./: .gitignore  README.md  get_models.sh  pyproject.toml  setup.sh
finetune/: README.md  VIDEO_FINETUNING.md  video_finetuning_example.py
llava/: mm_utils.py
llava/model/: builder.py  llava_arch.py
llava/train/: llava_trainer.py  train.py  train_mem.py  train_qwen.py
scripts/: finetune.md  finetune_video.sh  run_inference.sh  train_video_exercise.sh  verify_setup.sh
utils/: README.md  hf_upload.py  inference_single.py  load_dataset.py  plot_training_stats.py  qved_from_fine_labels.py  test_inference.py
