[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llava"
version = "1.2.2.post1"
description = "Towards GPT-4 like large language and visual assistant."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.6.0", "torchvision==0.21.0",
    "transformers==4.48.3", "tokenizers==0.21.0", "sentencepiece==0.1.99", "shortuuid",
    "accelerate==1.6.0", "peft>=0.10.0,<0.14.0", "bitsandbytes",
    "pydantic", "markdown2[all]", "numpy==1.26.4", "scikit-learn==1.2.2",
    "gradio==5.11.0", "requests", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==1.0.15",
    "coremltools==8.2"
]

[project.optional-dependencies]
train = ["deepspeed==0.13.1", "ninja", "wandb"]
video = ["decord>=0.6.0"]
build = ["build", "twine"]

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Enforce: pycodestyle (E/W), pyflakes (F), import sort (I), naming (N), docstrings (D)
select = ["E", "W", "F", "I", "N", "D"]

# Relax a few docstring rules most teams ignore early on:
ignore = ["D100", "D104", "D107", "D401"]

# Pick one from each incompatible pair:
# - D203 vs D211  → keep D211 (no-blank-line-before-class), ignore D203
# - D212 vs D213  → keep D213 (multi-line summary on 2nd line), ignore D212
extend-ignore = ["D203", "D212"]

[tool.ruff.lint.isort]
combine-as-imports = true
